ADD monitoring, app context, FIX sql, publish message
